--- a/assets/scss/utilities/_alignment.scss
+++ b/assets/scss/utilities/_alignment.scss
@@ -48,8 +48,11 @@
 	}
 
 	&wide {
-		max-width: 120%;
 		transform: translate(-50%);
+		max-width: 100%;
+		@include mq(m) {
+			max-width: 120%;
+		}
 	}
 
 	&full {
