--- a/assets/scss/components/_nav-primary.scss
+++ b/assets/scss/components/_nav-primary.scss
@@ -22,5 +22,23 @@
 		margin: 0 0 0 auto;
 		padding: 0;
 		background: 0;
+
+		.menu-item-has-children {
+	        >a:after {
+	        content: "\f107";
+	        font-family: 'FontAwesome';
+	        font-weight: 400;
+	        font-size: 1.5rem;
+	        padding-left: 0.4em;
+	        speak: none;
+	        }
+	        .sub-menu li.menu-item-has-children > a:after {
+	            content: "\f105";
+	            font-family: 'FontAwesome';
+	            font-weight: 400;
+	            padding-left: 0.4em;
+	            speak: none;
+	        }
+	    }
 	}
 }
