--- a/assets/scss/settings/_typography.scss
+++ b/assets/scss/settings/_typography.scss
@@ -7,11 +7,11 @@
 ////
 
 // Font sizes
-$base--font-size: 1.6rem;
+$base--font-size: 1.7rem;
 
 $font-size--h1: 2.3em;
-$font-size--h2: 1.8em;
-$font-size--h3: 1.5em;
+$font-size--h2: 1.7em;
+$font-size--h3: 1.4em;
 $font-size--h4: 1.3em;
 $font-size--h5: 1.2em;
 $font-size--h6: 1.1em;
@@ -28,8 +28,10 @@ $font-sizes: (
 // Font families
 $base--font-family: $font-stack-system;
 
-$font-family--heading: $base--font-family;
+$font-family--subheading: $base--font-family;
+$font-family--heading: $base--font-family; 
 $font-family--code: $font-stack-consolas;
+// $font-family--special: 'scriptina-pro', sans-serif;
 
 // Font weights
 $font-weight--extralight: 200;
