--- a/assets/scss/tools/_mixins.scss
+++ b/assets/scss/tools/_mixins.scss
@@ -218,26 +218,49 @@
 @mixin button {
 	display: inline-block;
 	width: auto;
-	padding: $spacing--m * $minor-third $gutter;
-	border: 0;
-	border-radius: $base--border--radius;
+	padding: $spacing--m $spacing--m * $minor-third;
+	border: 0 !important;
+	border-radius: 30px;
 	color: $color--white;
 	background-color: $color--primary;
 	font-size: $base--font-size / $major-second;
-	font-weight: $font-weight--heading;
+	font-weight: $font-weight--bold;
+	box-shadow: 0px 3px 6px #0e0f0f29;
 	line-height: 1;
 	text-align: center;
 	white-space: normal;
 	text-decoration: none;
 	cursor: pointer;
+	margin-bottom: 10px;
+	position: relative;
+	overflow: hidden;
+	z-index: 1;
+	transition: color 150ms ease-in-out;
+
 
 	@include transition();
+
+	&:after {
+	    content: '';
+	    position: absolute;
+	    display: block;
+	    top: 0;
+	    left: 50%;
+	    transform: translateX(-50%);
+	    width: 0;
+	    height: 100%;
+	    background: $color--blue;
+	    z-index: -1;
+	    transition: width 150ms ease-in-out;
+		}
 
 	@include hover-focus {
 		outline: none;
 		color: $color--white;
-		background-color: lighten($color--primary, 10);
+		background-color: $color--red;
+		border: none;
 		text-decoration: none;
+		transform: scale(1.1);
 	}
 
 	&:disabled {
@@ -261,13 +284,28 @@
 	}
 
 	&.outline {
-		border: 1px solid $color--primary;
-		color: $color--primary;
+		border: 3px solid $color--blue !important;
+		color: $color--blue;
 		background: transparent;
+		padding: $spacing--m $spacing--m * $minor-third;
 
 		@include hover-focus {
 			color: $color--white;
-			background: $color--primary;
+			background: $color--blue;
+
+			&:after {
+		      width: 110%;
+		    }
+		}
+	}
+
+	&.secondary {
+		color: $color--gray-900;
+		background: $color--yellow;
+
+		@include hover-focus {
+			color: $color--white;
+			background: $color--yellow;
 		}
 	}
 
