added new theme styles

--- a/assets/scss/components/_entry.scss
+++ b/assets/scss/components/_entry.scss
@@ -45,7 +45,7 @@
 		.page & {
 			margin: 0 0 $gutter;
 			&:after {
-				content: url("/wp-content/themes/urban-strategies-pro/assets/svg/yellowhr2.svg");
+				content: url("");
 				width: 120px;
 				display: block;
 				margin: 0 auto;
