--- a/assets/scss/components/_hero-section.scss
+++ b/assets/scss/components/_hero-section.scss
@@ -40,6 +40,13 @@
 	}
 }
 
+// When you don't want an overlay
+.no-overlay {
+	.hero-section:before {
+		display: none;
+	}
+}
+
 .hero-section {
 
 	@include hero-section;
