--- a/assets/scss/components/_featured-content.scss
+++ b/assets/scss/components/_featured-content.scss
@@ -22,6 +22,14 @@
 		> span {
 			display: none;
 		}
+
+		&-meta {
+			font-size: smaller;
+		}
+
+		&-wrap {
+			padding: $spacing--s;
+		}
 	}
 
 	.sidebar & {
@@ -38,6 +46,7 @@
 		.entry-title {
 			margin-bottom: $spacing--xxs;
 			font-size: $base--font-size;
+			font-family: $font-family--heading;
 		}
 	}
 }
